include/libmpq/mpq.h

/*
 * Opaque archive handle owned by libmpq. Callers obtain it from an open or
 * create operation and must release it with libmpq__archive_close. The
 * structure layout is private so applications must not allocate or inspect it.
 */
typedef struct mpq_archive mpq_archive_s;
/*
 * Signed public offset type used for archive positions and file sizes. A
 * negative value is reserved for error reporting and is never a valid size or
 * offset. The type keeps the public ABI consistent across supported systems.
 */
typedef int64_t libmpq__off_t;
/*
 * Return the public MPQ format version of an opened archive.
 * The result identifies the supported v1 or v2 layout rather than the raw
 * on-disk version field. The output pointer must be valid and is unchanged on
 * failure.
 */
extern LIBMPQ_API int32_t libmpq__archive_version(mpq_archive_s *mpq_archive, uint32_t *version);
/*
 * Return the number of valid extractable file entries in an archive.
 * The value is the public file-number range used by the file query and read
 * functions, not the reserved block-table capacity or raw hash-table count.
 */
extern LIBMPQ_API int32_t libmpq__archive_files(mpq_archive_s *mpq_archive, uint32_t *files);
/*
 * Return the stored size of one public file entry.
 * The value includes sector offset-table bytes when the file uses a packed
 * multi-sector representation, and excludes unrelated archive metadata.
 */
extern LIBMPQ_API int32_t libmpq__file_size_packed(
    mpq_archive_s *mpq_archive, uint32_t file_number, libmpq__off_t *packed_size
);
/*
 * Return the logical size of one public file entry after decompression.
 * This is the size callers should expect from libmpq__file_read, independent
 * of how many sectors or compression stages are stored on disk.
 */
extern LIBMPQ_API int32_t libmpq__file_size_unpacked(
    mpq_archive_s *mpq_archive, uint32_t file_number, libmpq__off_t *unpacked_size
);
/*
 * Return the file payload offset relative to the beginning of the MPQ archive.
 * The value points to the stored file representation, which may begin with a
 * sector offset table for compressed multi-sector files.
 */
extern LIBMPQ_API int32_t
libmpq__file_offset(mpq_archive_s *mpq_archive, uint32_t file_number, libmpq__off_t *offset);
/*
 * Return the number of logical sectors used by one file entry.
 * For compressed files this is also the number of data sectors described by
 * the packed offset table; single-unit files report one block.
 */
extern LIBMPQ_API int32_t
libmpq__file_blocks(mpq_archive_s *mpq_archive, uint32_t file_number, uint32_t *blocks);
/*
 * Return the actual stored MPQ block-table flags for one archive member.
 * Inspect LIBMPQ_FILE_FLAG_* bits for storage properties; compressed files
 * may contain raw fallback sectors. The output is zeroed before validation.
 */
extern LIBMPQ_API int32_t
libmpq__file_flags(mpq_archive_s *archive, uint32_t file_number, uint32_t *flags);
/*
 * Resolve a plaintext MPQ filename to its public file number.
 * The name is hashed using the library's Storm-compatible rules and matched
 * against locale and platform variants in the archive. The returned number
 * is suitable for the size, property, block, and read APIs.
 */
extern LIBMPQ_API int32_t
libmpq__file_number(mpq_archive_s *mpq_archive, const char *filename, uint32_t *number);
/*
 * Calculate the three Storm-compatible hashes used to identify an MPQ name.
 * The outputs are deterministic for a given byte string and are written to
 * hash1, hash2, and hash3; this helper performs no archive lookup and cannot
 * report an allocation or I/O error.
 */
extern LIBMPQ_API void
libmpq__file_hash(const char *filename, uint32_t *hash1, uint32_t *hash2, uint32_t *hash3);
/*
 * Resolve precomputed Storm filename hashes to a public file number.
 * This avoids recalculating the hashes when a caller already has them, but it
 * otherwise follows the same collision probing and table validation as name
 * lookup. The caller must supply all three hashes from the same filename.
 */
extern LIBMPQ_API int32_t libmpq__file_number_from_hash(
    mpq_archive_s *mpq_archive, uint32_t hash1, uint32_t hash2, uint32_t hash3, uint32_t *number
);
/*
 * Read a complete logical file into a caller-provided output buffer.
 * The library decrypts and decompresses sectors as necessary and reports the
 * number of bytes copied through transferred. out_size must be large enough
 * for the unpacked file or the operation returns LIBMPQ_ERROR_SIZE.
 */
extern LIBMPQ_API int32_t libmpq__file_read(
    mpq_archive_s *mpq_archive, uint32_t file_number, uint8_t *out_buf, libmpq__off_t out_size,
    libmpq__off_t *transferred
);
/*
 * Return the logical unpacked size of one sector in an archive member.
 * No explicit offset-table management is required;
 * block_number must be within the count returned by libmpq__file_blocks.
 */
extern LIBMPQ_API int32_t libmpq__block_size_unpacked(
    mpq_archive_s *mpq_archive, uint32_t file_number, uint32_t block_number,
    libmpq__off_t *unpacked_size
);
/* Return one block's stored byte size, excluding offset/checksum tables.
 * Compressed sector offsets are loaded internally; raw and single-unit sizes
 * come from archive metadata. Encryption does not change the size. A non-NULL
 * packed_size output is initialized to zero and remains zero on any failure. */
extern LIBMPQ_API int32_t libmpq__block_size_packed(
    mpq_archive_s *archive, uint32_t file_number, uint32_t block_number, libmpq__off_t *packed_size
);
/* Return the stored method byte, zero for raw storage (including fallback),
 * or LIBMPQ_COMPRESSION_PKZIP for a legacy imploded block. Method 0x12 is the
 * legacy bzip2/zlib chain in v1 and LZMA in v2; this is not the writer's LZMA
 * selector. No decompression or checksum verification is performed. A non-NULL
 * compression output is initialized to zero and remains zero on failure. */
extern LIBMPQ_API int32_t libmpq__block_compression(
    mpq_archive_s *archive, uint32_t file_number, uint32_t block_number, uint32_t *compression
);
/*
 * Read one logical sector from an archive member, managing its offset cache
 * internally for the duration of the read.
 * The operation locates the packed bytes, decrypts them when required, and
 * reverses the MPQ compression pipeline before copying to out_buf. The
 * caller must provide sufficient space for the selected block and receives the
 * actual byte count through transferred.
 */
extern LIBMPQ_API int32_t libmpq__block_read(
    mpq_archive_s *mpq_archive, uint32_t file_number, uint32_t block_number, uint8_t *out_buf,
    libmpq__off_t out_size, libmpq__off_t *transferred
);