bindings/d/source/libmpq/native.d


    /** Query the archive format version. */
    int libmpq__archive_version(mpq_archive_s* archive, uint* value);

    /** Query the number of valid archive files. */
    int libmpq__archive_files(mpq_archive_s* archive, uint* value);

    /** Query one file's packed size. */
    int libmpq__file_size_packed(mpq_archive_s* archive, uint number,
                                 off_t* value);

    /** Query one file's unpacked size. */
    int libmpq__file_size_unpacked(mpq_archive_s* archive, uint number,
                                   off_t* value);

    /** Query one file's archive-relative payload offset. */
    int libmpq__file_offset(mpq_archive_s* archive, uint number, off_t* value);

    /** Query one file's block count. */
    int libmpq__file_blocks(mpq_archive_s* archive, uint number, uint* value);

    /** Query one file's stored block-table flags. */
    int libmpq__file_flags(mpq_archive_s* archive, uint number, uint* flags);

    /** Resolve a filename using Storm's archive hash tables. */
    int libmpq__file_number(mpq_archive_s* archive, const(char)* filename,
                            uint* number);

    /** Calculate the three Storm hashes for a filename. */
    void libmpq__file_hash(const(char)* filename, uint* hash1, uint* hash2,
                           uint* hash3);

    /** Resolve precomputed Storm hashes to a file number. */
    int libmpq__file_number_from_hash(mpq_archive_s* archive, uint hash1,
                                      uint hash2, uint hash3, uint* number);

    /** Read one complete unpacked file into the caller's buffer. */
    int libmpq__file_read(mpq_archive_s* archive, uint number, ubyte* buffer,
                          off_t size, off_t* transferred);

    int libmpq__stream_open(mpq_archive_s* archive, uint number, mpq_stream_s** stream);
    int libmpq__stream_open_name(mpq_archive_s* archive, const(char)* filename,
                                 mpq_stream_s** stream);
    int libmpq__stream_read(mpq_stream_s* stream, ubyte* buffer, off_t size,
                            off_t* transferred);
    int libmpq__stream_seek(mpq_stream_s* stream, off_t offset, int origin);
    int libmpq__stream_tell(mpq_stream_s* stream, off_t* position);
    int libmpq__stream_size(mpq_stream_s* stream, off_t* size);
    int libmpq__stream_close(mpq_stream_s* stream);

    /** Query one block's stored size, excluding offset/checksum tables. */
    int libmpq__block_size_packed(mpq_archive_s* archive, uint number,
                                uint block, off_t* value);

    /** Query the stored method byte, or zero for raw fallback. */
    int libmpq__block_compression(mpq_archive_s* archive, uint number,
                                 uint block, uint* compression);

    /** Query one block's unpacked size. */
    int libmpq__block_size_unpacked(mpq_archive_s* archive, uint number,
                                    uint block, off_t* value);

    /** Read one decrypted and decompressed block. */
    int libmpq__block_read(mpq_archive_s* archive, uint number, uint block,
                           ubyte* buffer, off_t size, off_t* transferred);
}
